# insurance-ocr-llm-project

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
